--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ flask-marshmallow==0.14.0
 Flask-Migrate==2.5.3
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.4
+flask-swagger-ui==3.36.0
 gunicorn==20.0.4
 idna==2.10
 itsdangerous==1.1.0
